feat: 提取文件扩展名逻辑到工具类并优化向量化批处理常量配置